// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AssetsThumbnail /> should render properly a valid asset 1`] = `
.emotion-0 {
  position: relative;
  border: 4px solid transparent;
  width: 100%;
  height: 100%;
}

.emotion-0:hover {
  border: 4px solid #ffffff;
}

.emotion-0:hover a,
.emotion-0:hover button {
  opacity: 1;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #2e2e2e;
  overflow: hidden;
  border-radius: 0;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #3b3b3b80;
  opacity: 0;
  position: absolute;
  top: 4px;
  right: 4px;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  opacity: 1;
  background-color: #3b3b3b;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #3b3b3b80;
  opacity: 0;
  position: absolute;
  bottom: 4px;
  right: 4px;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  opacity: 1;
  background-color: #3b3b3b;
}

<div
  className="emotion-0"
>
  <a
    aria-label="Select asset test_document.docx"
    className="emotion-1"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?assetId=pNwnXjVntgbDQgPZhkXqVT-2URMqvJNL&query=W3sidHlwZSI6InNlYXJjaCIsInZhbHVlIjoiQ2F0In1d"
    onClick={[Function]}
    onMouseEnter={[Function]}
    title="test_document.docx"
  >
    <img
      alt="test_document.docx"
      className="emotion-2"
      src="/api/v1/projects/03aa4218-1243-4a62-8113-42064dcf8f0e/assets/pNwnXjVntgbDQgPZhkXqVT-2URMqvJNL/files/category/web-proxy/name/web-proxy.jpg/"
    />
  </a>
  <button
    aria-label="Find similar images to test_document.docx"
    className="emotion-3"
    onClick={[Function]}
    title="Find similar images"
    type="button"
  >
    <svg
      color="#ffffff"
      data-file-name="similarity.svg"
      height={20}
    />
  </button>
  <a
    aria-label="Asset details test_document.docx"
    className="emotion-4"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer/pNwnXjVntgbDQgPZhkXqVT-2URMqvJNL?query=W3sidHlwZSI6InNlYXJjaCIsInZhbHVlIjoiQ2F0In1d"
    onClick={[Function]}
    onMouseEnter={[Function]}
    title="Asset details"
  >
    <svg
      color="#ffffff"
      data-file-name="search.svg"
      height={20}
    />
  </a>
</div>
`;

exports[`<AssetsThumbnail /> should render properly a valid selected asset 1`] = `
.emotion-0 {
  position: relative;
  border: 4px solid #3A5DFF;
  width: 100%;
  height: 100%;
}

.emotion-0:hover {
  border: 4px solid #3A5DFF;
}

.emotion-0:hover a,
.emotion-0:hover button {
  opacity: 1;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #2e2e2e;
  overflow: hidden;
  border-radius: 0;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #3b3b3b80;
  opacity: 0;
  position: absolute;
  top: 4px;
  right: 4px;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  opacity: 1;
  background-color: #3b3b3b;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #3b3b3b80;
  opacity: 0;
  position: absolute;
  bottom: 4px;
  right: 4px;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  opacity: 1;
  background-color: #3b3b3b;
}

<div
  className="emotion-0"
>
  <a
    aria-label="Select asset test_document.docx"
    className="emotion-1"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
    onClick={[Function]}
    onMouseEnter={[Function]}
    title="test_document.docx"
  >
    <img
      alt="test_document.docx"
      className="emotion-2"
      src="/api/v1/projects/03aa4218-1243-4a62-8113-42064dcf8f0e/assets/pNwnXjVntgbDQgPZhkXqVT-2URMqvJNL/files/category/web-proxy/name/web-proxy.jpg/"
    />
  </a>
  <button
    aria-label="Find similar images to test_document.docx"
    className="emotion-3"
    onClick={[Function]}
    title="Find similar images"
    type="button"
  >
    <svg
      color="#ffffff"
      data-file-name="similarity.svg"
      height={20}
    />
  </button>
  <a
    aria-label="Asset details test_document.docx"
    className="emotion-4"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer/pNwnXjVntgbDQgPZhkXqVT-2URMqvJNL"
    onClick={[Function]}
    onMouseEnter={[Function]}
    title="Asset details"
  >
    <svg
      color="#ffffff"
      data-file-name="search.svg"
      height={20}
    />
  </a>
</div>
`;

exports[`<AssetsThumbnail /> should render properly a video asset 1`] = `
.emotion-0 {
  position: relative;
  border: 4px solid transparent;
  width: 100%;
  height: 100%;
}

.emotion-0:hover {
  border: 4px solid #ffffff;
}

.emotion-0:hover a,
.emotion-0:hover button {
  opacity: 1;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #2e2e2e;
  overflow: hidden;
  border-radius: 0;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #3b3b3b80;
  opacity: 0;
  position: absolute;
  top: 4px;
  right: 4px;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  opacity: 1;
  background-color: #3b3b3b;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #3b3b3b80;
  opacity: 0;
  position: absolute;
  bottom: 4px;
  right: 4px;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  opacity: 1;
  background-color: #3b3b3b;
}

.emotion-5 {
  position: absolute;
  bottom: 4px;
  left: 4px;
  padding: 2px;
  color: #000000;
  background-color: #ffffff80;
}

<div
  className="emotion-0"
>
  <a
    aria-label="Select asset FatManOnABike1914.mp4"
    className="emotion-1"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?assetId=srL8ob5cTpCJjYoKkqqfa2ciyG425dGi"
    onClick={[Function]}
    onMouseEnter={[Function]}
    title="FatManOnABike1914.mp4"
  >
    <img
      alt="FatManOnABike1914.mp4"
      className="emotion-2"
      src="/api/v1/projects/03aa4218-1243-4a62-8113-42064dcf8f0e/assets/srL8ob5cTpCJjYoKkqqfa2ciyG425dGi/files/category/web-proxy/name/web-proxy.jpg/"
    />
  </a>
  <button
    aria-label="Find similar images to FatManOnABike1914.mp4"
    className="emotion-3"
    onClick={[Function]}
    title="Find similar images"
    type="button"
  >
    <svg
      color="#ffffff"
      data-file-name="similarity.svg"
      height={20}
    />
  </button>
  <a
    aria-label="Asset details FatManOnABike1914.mp4"
    className="emotion-4"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer/srL8ob5cTpCJjYoKkqqfa2ciyG425dGi"
    onClick={[Function]}
    onMouseEnter={[Function]}
    title="Asset details"
  >
    <svg
      color="#ffffff"
      data-file-name="search.svg"
      height={20}
    />
  </a>
  <div
    className="emotion-5"
  >
    2:24
  </div>
</div>
`;

exports[`<AssetsThumbnail /> should render properly an asset without thumbnails 1`] = `
.emotion-0 {
  position: relative;
  border: 4px solid transparent;
  width: 100%;
  height: 100%;
}

.emotion-0:hover {
  border: 4px solid #ffffff;
}

.emotion-0:hover a,
.emotion-0:hover button {
  opacity: 1;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #2e2e2e;
  overflow: hidden;
  border-radius: 0;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #3b3b3b80;
  opacity: 0;
  position: absolute;
  top: 4px;
  right: 4px;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  opacity: 1;
  background-color: #3b3b3b;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #3b3b3b80;
  opacity: 0;
  position: absolute;
  bottom: 4px;
  right: 4px;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  opacity: 1;
  background-color: #3b3b3b;
}

<div
  className="emotion-0"
>
  <a
    aria-label="Select asset irr.pdf"
    className="emotion-1"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?assetId=3DDnuCNruXiXtRjKxwGJt2UPGNTAZut4"
    onClick={[Function]}
    onMouseEnter={[Function]}
    title="irr.pdf"
  >
    <img
      alt="irr.pdf"
      className="emotion-2"
      src="/api/v1/projects/03aa4218-1243-4a62-8113-42064dcf8f0e/assets/3DDnuCNruXiXtRjKxwGJt2UPGNTAZut4/files/category/web-proxy/name/web-proxy.jpg/"
    />
  </a>
  <button
    aria-label="Find similar images to irr.pdf"
    className="emotion-3"
    onClick={[Function]}
    title="Find similar images"
    type="button"
  >
    <svg
      color="#ffffff"
      data-file-name="similarity.svg"
      height={20}
    />
  </button>
  <a
    aria-label="Asset details irr.pdf"
    className="emotion-4"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer/3DDnuCNruXiXtRjKxwGJt2UPGNTAZut4"
    onClick={[Function]}
    onMouseEnter={[Function]}
    title="Asset details"
  >
    <svg
      color="#ffffff"
      data-file-name="search.svg"
      height={20}
    />
  </a>
</div>
`;

exports[`<AssetsThumbnail /> should render properly an invalid asset 1`] = `
.emotion-0 {
  position: relative;
  border: 4px solid transparent;
  width: 100%;
  height: 100%;
}

.emotion-0:hover {
  border: 4px solid #ffffff;
}

.emotion-0:hover a,
.emotion-0:hover button {
  opacity: 1;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #2e2e2e;
  overflow: hidden;
  border-radius: 0;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #3b3b3b80;
  opacity: 0;
  position: absolute;
  top: 4px;
  right: 4px;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  opacity: 1;
  background-color: #3b3b3b;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #3b3b3b80;
  opacity: 0;
  position: absolute;
  bottom: 4px;
  right: 4px;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  opacity: 1;
  background-color: #3b3b3b;
}

<div
  className="emotion-0"
>
  <a
    aria-label="Select asset undefined"
    className="emotion-1"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?assetId=zs5GXqqMapHkZpKYewLVNPppddQfaCK-"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <img
      className="emotion-2"
      src="/web-proxy.jpg/"
    />
  </a>
  <button
    aria-label="Find similar images to undefined"
    className="emotion-3"
    onClick={[Function]}
    title="Find similar images"
    type="button"
  >
    <svg
      color="#ffffff"
      data-file-name="similarity.svg"
      height={20}
    />
  </button>
  <a
    aria-label="Asset details undefined"
    className="emotion-4"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer/zs5GXqqMapHkZpKYewLVNPppddQfaCK-"
    onClick={[Function]}
    onMouseEnter={[Function]}
    title="Asset details"
  >
    <svg
      color="#ffffff"
      data-file-name="search.svg"
      height={20}
    />
  </a>
</div>
`;
